<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/order_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <TextView
        android:id="@+id/order_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_code"
        android:textSize="22sp"
        android:textColor="@color/dark"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"/>
    <TextView
        android:id="@+id/order_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_date"
        android:textSize="22sp"
        android:textColor="@color/gray"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="85dp"
        android:background="@color/light" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_status"
        android:textSize="22sp"
        android:textColor="@color/gray"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="95dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/items"
        android:textSize="22sp"
        android:textColor="@color/gray"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="130dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="22sp"
        android:textColor="@color/gray"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="165dp"/>
    <TextView
        android:id="@+id/order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shipping"
        android:textSize="22sp"
        android:textColor="@color/dark"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="95dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"/>
    <TextView
        android:id="@+id/order_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="22sp"
        android:textColor="@color/dark"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="130dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"/>
    <TextView
        android:id="@+id/order_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        android:textSize="22sp"
        android:textColor="@color/dark"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="165dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"/>
</RelativeLayout>