<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/address_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <TextView
        android:id="@+id/receiver_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receiver"
        android:textSize="22sp"
        android:textColor="@color/dark"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"/>
    <TextView
        android:id="@+id/receiver_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="22sp"
        android:textColor="@color/gray"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"/>
    <TextView
        android:id="@+id/receiver_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receiver_phone_number"
        android:textSize="22sp"
        android:textColor="@color/gray"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="165dp"/>
</RelativeLayout>