<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/header_profile_title"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/white"
        app:backgroundTint="@color/white"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="20dp"
            android:text="@string/brand_names"
            android:textColor="@color/dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/back_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:backgroundTint="#FFFFFF"
            android:text="@string/profile_button"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:drawableLeft="@drawable/ic_outline_arrow_back_24"
            android:gravity="start|center"
            android:textAllCaps="false"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:drawableStart="@drawable/ic_outline_arrow_back_24" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="119dp"
            android:background="@color/light" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/userInfo_layout"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        app:layout_constraintTop_toBottomOf="@id/header_profile_title">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/user_imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            app:roundPercent="1"
            app:srcCompat="@mipmap/ic_launcher" />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="13dp"
            android:text="@string/name"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="33dp"
            android:text="@string/username"
            android:textColor="@color/gray"
            android:textSize="12sp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/gender_layout"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        app:layout_constraintTop_toBottomOf="@id/userInfo_layout">
        <TextView
            android:id="@+id/gender_icon"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:drawableStart="@drawable/ic_outline_male_27"
            android:drawableLeft="@drawable/ic_outline_male_27"
            android:layout_marginLeft="18dp"
            android:gravity="center"/>
        <TextView
            android:layout_height="match_parent"
            android:text="@string/gender"
            android:layout_width="wrap_content"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="61dp"
            android:gravity="center"
            android:layout_marginStart="61dp" />
        <TextView
            android:id="@+id/gender_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/male"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:gravity="center"
            android:layout_marginRight="62dp"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_arrow_forward_ios_27"
            android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_27"
            android:layout_marginLeft="367dp"
            android:gravity="center"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/birthday_layout"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        app:layout_constraintTop_toBottomOf="@id/gender_layout">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:drawableStart="@drawable/ic_outline_date_range_27"
            android:drawableLeft="@drawable/ic_outline_date_range_27"
            android:layout_marginLeft="18dp"
            android:gravity="center"/>
        <TextView
            android:layout_height="match_parent"
            android:text="@string/birthday"
            android:layout_width="wrap_content"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="61dp"
            android:gravity="center"
            android:layout_marginStart="61dp" />
        <TextView
            android:id="@+id/birthday_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/user_birthday"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:gravity="center"
            android:layout_marginRight="62dp"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_arrow_forward_ios_27"
            android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_27"
            android:layout_marginLeft="367dp"
            android:gravity="center"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        app:layout_constraintTop_toBottomOf="@id/birthday_layout">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:drawableStart="@drawable/ic_outline_email_27"
            android:drawableLeft="@drawable/ic_outline_email_27"
            android:layout_marginLeft="18dp"
            android:gravity="center"/>
        <TextView
            android:layout_height="match_parent"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="61dp"
            android:gravity="center"
            android:layout_marginStart="61dp" />
        <TextView
            android:id="@+id/user_email_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/user_email"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:gravity="center"
            android:layout_marginRight="62dp"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_arrow_forward_ios_27"
            android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_27"
            android:layout_marginLeft="367dp"
            android:gravity="center"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/phone_number_layout"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        app:layout_constraintTop_toBottomOf="@id/email_layout">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:drawableStart="@drawable/ic_outline_phone_android_27"
            android:drawableLeft="@drawable/ic_outline_phone_android_27"
            android:layout_marginLeft="18dp"
            android:gravity="center"/>
        <TextView
            android:layout_height="match_parent"
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="61dp"
            android:gravity="center"
            android:layout_marginStart="61dp" />
        <TextView
            android:id="@+id/phone_number_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/user_phone_number"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:gravity="center"
            android:layout_marginRight="62dp"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_arrow_forward_ios_27"
            android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_27"
            android:layout_marginLeft="367dp"
            android:gravity="center"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        app:layout_constraintTop_toBottomOf="@id/phone_number_layout">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:drawableStart="@drawable/ic_outline_lock_27"
            android:drawableLeft="@drawable/ic_outline_lock_27"
            android:layout_marginLeft="18dp"
            android:gravity="center"/>
        <TextView
            android:layout_height="match_parent"
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginLeft="61dp"
            android:gravity="center"
            android:layout_marginStart="61dp" />
        <TextView
            android:id="@+id/user_password_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/user_password"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:gravity="center"
            android:layout_marginRight="62dp"
            android:layout_alignParentRight="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_arrow_forward_ios_27"
            android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_27"
            android:layout_marginLeft="367dp"
            android:gravity="center"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@id/control_layout">
        <Button
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:text="@string/logout"
            android:gravity="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:backgroundTint="@color/white"
            android:textColor="@color/gray"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.Button"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/control_layout"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/home_button"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            app:backgroundTint="#FFFFFF"
            android:drawableTop="@drawable/ic_outline_home_24"
            android:gravity="center"
            android:layout_weight="1"
            android:paddingHorizontal="0dp"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <Button
            android:id="@+id/whislist_button"
            android:layout_height="match_parent"
            android:layout_width="110dp"
            app:backgroundTint="#FFFFFF"
            android:drawableTop="@drawable/ic_baseline_favorite_border_24"
            android:gravity="center"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_toRightOf="@+id/home_button" />
        <Button
            android:id="@+id/cart_button"
            android:layout_height="match_parent"
            android:layout_width="110dp"
            app:backgroundTint="#FFFFFF"
            android:drawableTop="@drawable/ic_outline_shopping_cart_24"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_toRightOf="@+id/whislist_button" />
        <Button
            android:id="@+id/me_button"
            android:layout_height="match_parent"
            android:layout_width="110dp"
            android:layout_toRightOf="@id/cart_button"
            app:backgroundTint="#FFFFFF"
            android:drawableTop="@drawable/ic_baseline_person_24"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>